--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,13 +27,10 @@
 <div class="container text-center mt-5 mb-5">
   <span class="texto_subtitle">Manzana Serrana</span>
   <br>
-  <p class="texto_title bold space_text">Nuestros Productos</p>
+  <p class="texto_title bold space_text">Inicio</p>
 </div>
 <div class="container mt-3 mb-3">
   <div class="row">
-    <div class="col-12">
-      <h1>Rancho Escondido</h1>
-    </div>
     <div class="col">
       <div class="">
         <img src="../../../assets/img/login-card-1.jpg" class="card-img-top" alt="...">
