--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,52 +1,47 @@
-<nav class="fondo_navbar navbar-expand-lg navbar-light fixed-top">
+<nav class="fondo_navbar navbar-expand-lg fixed-top">
   <div class="container-fluid p-0 m-2">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="row">
-      <div class="col mt-2">
-        <div class="navbar-links">
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item cursor_pointer">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">
-                  <span class="">Incio</span></a>
-              </li>
-              <li class="nav-item cursor_pointer">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/productos']">
-                  <span class="">Productos</span></a>
-              </li>
-              <li class="nav-item cursor_pointer">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/pedidos']">
-                  <span class="">Pedidos</span></a>
-              </li>
-              <li class="nav-item cursor_pointer">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/actividades']">
-                  <span class="">Actividades</span></a>
-              </li>
-              <li class="nav-item cursor_pointer">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/quienesSomos']">
-                  <span class="">¿Quienes Somos?</span></a>
-              </li>
-            </ul>
-          </div>
+      <div class="col mt-4">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item cursor_pointer mx-1">
+              <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/home']">
+                Incio</a>
+            </li>
+            <li class="nav-item cursor_pointer mx-1">
+              <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/productos']">
+                Productos</a>
+            </li>
+            <li class="nav-item cursor_pointer mx-1">
+              <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/pedidos']">
+                Pedidos</a>
+            </li>
+            <li class="nav-item cursor_pointer mx-1">
+              <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/actividades']">
+                Actividades</a>
+            </li>
+            <li class="nav-item cursor_pointer mx-1">
+              <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/quienesSomos']">
+                ¿Quienes Somos?</a>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="col">
-        <div class="navbar-header text-center">
-          <a class="navbar-brand" (click)="home">
-            <img src="" alt="" width="30" height="30">
-            <span class="gris">Manzana Serrana</span>
-          </a>
+        <div class="text-center py-2">
+          <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="70%" height="70%">
         </div>
       </div>
-      <div class="col mt-2 mr-4">
+      <div class="col mt-4 mr-4">
         <div class="navbar-social">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item cursor_pointer">
-                <i class="fa fa-facebook-official fa-lg gris" aria-hidden="true"></i>
+                <span class="icon-menu"></span>
               </li>
               <li class="nav-item cursor_pointer">
                 <i class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></i>
