--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,28 +1,31 @@
-<footer class="sticky-footer gris">
-      <div class="row">
-        <!-- Columna 1: Logo -->
-        <div class="col-md-3">
-          <img src="ruta_del_logo.png" alt="Logo de la empresa" width="100">
+<footer class="sticky-footer">
+  <div class="row">
+    <!-- Columna 1: Logo -->
+    <div class="col-md-2 text-center">
+      <img src="../../../assets/img/Logo Blanco.svg" alt="" width="100">
+    </div>
+    <!-- Columna 2: Datos de la empresa -->
+    <div class="col-md-4 ps-0 ms-0 texto_footer">
+      <p>Copyright © 2023 Manzana Serrana</p>
+    </div>
+    <!-- Columna 3: Campo de entrada de correo -->
+    <div class="col-md-3">
+      <form>
+        <label for="telefono" class="form-label texto_footer">Contacto</label>
+        <input type="email" class="form-control" placeholder="escribe tu mensaje aqui..." aria-label="Correo electrónico"
+          aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn btn_footer_correo" type="button">-></button>
         </div>
-        <!-- Columna 2: Datos de la empresa -->
-        <div class="col-md-4">
-          <p>Copyright © 2023 Manzana Serrana</p>
-        </div>
-        <!-- Columna 3: Campo de entrada de correo -->
-        <div class="col-md-3">
-          <div class="input-group mb-3">
-            <input type="email" class="form-control" placeholder="Correo electrónico" aria-label="Correo electrónico" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="button">Suscribirse</button>
-            </div>
-          </div>
-        </div>
-        <!-- Columna 4: Enlaces a las redes sociales -->
-        <div class="col-md-2">
-          <a href="#" class="fa fa-facebook-official fa-lg gris" aria-hidden="true"></a>
-          <a href="#" class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></a>
-          <a href="#" class="fa fa-instagram fa-lg gris" aria-hidden="true"></a>
-        </div>
+      </form>
+    </div>
+    <!-- Columna 4: Enlaces a las redes sociales -->
+    <div class="col-md-3">
+      <div class="d-flex justify-content-end">
+        <a href="https://www.ejemplo.com" class="icon_footer"><span class="icon-face-blanco"></span></a>
+        <a href="https://www.ejemplo.com" class="icon_footer"><span class="icon-insta"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span></a>
+        <a href="https://www.ejemplo.com" class="icon_footer"><span class="icon-twitter-x"></span></a>
       </div>
-  </footer>
-  
+    </div>
+  </div>
+</footer>
