--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,21 +36,11 @@
           <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="70%" height="70%">
         </div>
       </div>
-      <div class="col mt-4 mr-4">
-        <div class="navbar-social">
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item cursor_pointer">
-                <span class="icon-menu"></span>
-              </li>
-              <li class="nav-item cursor_pointer">
-                <i class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></i>
-              </li>
-              <li class="nav-item cursor_pointer">
-                <i class="fa fa-instagram fa-lg gris" aria-hidden="true"></i>
-              </li>
-            </ul>
-          </div>
+      <div class="col">
+        <div class="d-flex justify-content-end">
+          <a href="https://www.ejemplo.com" class="icon"><span class="icon-face-blanco"></span></a>
+          <a href="https://www.ejemplo.com" class="icon"><span class="icon-insta"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span></a>
+          <a href="https://www.ejemplo.com" class="icon"><span class="icon-twitter-x"></span></a>
         </div>
       </div>
     </div>
