--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
     <div class="container">
-        <a class="navbar-brand">
-            <img src="../../../assets/img/" alt="..." width="30" height="30"><span
-                class="gris">Manzana Serrana</span></a>
+        <div class="text-center">
+            <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="70%" height="70%">
+          </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
