--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -33,17 +33,17 @@
     <span class="texto_subtitle">Manzana Serrana</span><br>
     <p class="texto_title bold espacios_textos">Nuestros</p><br>
     <p class="texto_title bold espacios_textos">Productos</p>
-  </div>
-  <div class="d-flex justify-content-center">
+</div>
+<div class="d-flex justify-content-center">
     <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link">Mayoreo</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Menudeo</a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link">Mayoreo</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link">Menudeo</a>
+        </li>
     </ul>
-  </div>
+</div>
 <div class="container mt-5 mb-5">
     <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -63,7 +63,7 @@
                         <div class="row row-cols-1 row-cols-md-3 g-5">
                             <ng-container *ngFor="let aux of listaProductos">
                                 <div class="col mb-2">
-                                    <div class="card borde p-3">
+                                    <div class="card borde p-3" style="min-height: 100%;">
                                         <div class="check-mark">
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox"
@@ -74,8 +74,12 @@
                                         <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(aux.foto)"
                                             class="card-img-fixed text-center" alt="...">
                                         <div class="card-body">
-                                            <h5 class="card-title texto_card bold text-center">{{ aux.nombre }}</h5>
-                                            <p>{{ aux.descripcion }}</p>
+                                            <div class="text-center">
+                                                <p class="texto_card text-center espacios_textos">Manzana</p><br>
+                                                <p class="texto_card_big text-center espacios_textos">{{ aux.nombre }}
+                                                </p>
+                                            </div>
+                                            <p class="descripcion_card my-1">{{ aux.descripcion }}</p>
                                             <ng-container *ngIf="aux.estatus == 1; else no">
                                                 <p class="card-text" style="color: green;">Disponible</p>
                                             </ng-container>
@@ -83,6 +87,8 @@
                                                 <p class="card-text">No Disponible</p>
                                             </ng-template>
                                             <p class="card-text">${{aux.precioTonelada}} MXN por Tonelada</p>
+                                        </div>
+                                        <div class="mx-2">
                                             <div class="row">
                                                 <div class="col">
                                                     <label for="cantidad">Cantidad:</label>
@@ -133,12 +139,13 @@
                                     <p class="texto_title bold space_text">Pedidos</p>
                                 </div>
                                 <div class="row">
-                                    <div class="col texto_card">
+                                    <div class="col ">
                                         <form [formGroup]="productForm">
                                             <div class="row">
                                                 <div class="col-md-12 mb-3">
-                                                    <label for="nombre" class="form-label">Nombre</label>
-                                                    <input type="text" class="form-control" id="nombre"
+                                                    <label for="nombre" class="form-label texto_card">Nombre
+                                                        Completo:</label>
+                                                    <input type="text" class="form-control texto_input" id="nombre"
                                                         placeholder='"Nombre Apellidos"' formControlName="nombre">
                                                     <div *ngIf="productForm?.get('nombre')?.hasError('required') && productForm.get('nombre')?.touched"
                                                         class="invalid-check">
@@ -148,8 +155,8 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-6 mb-3">
-                                                    <label for="estado" class="form-label">Estado</label>
-                                                    <input type="text" class="form-control" id="estado"
+                                                    <label for="estado" class="form-label texto_card">Estado:</label>
+                                                    <input type="text" class="form-control texto_input" id="estado"
                                                         placeholder='"Puebla"' formControlName="estado">
                                                     <div *ngIf="productForm?.get('estado')?.hasError('required') && productForm.get('estado')?.touched"
                                                         class="invalid-check">
@@ -157,8 +164,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6 mb-3">
-                                                    <label for="ciudad" class="form-label">Ciudad</label>
-                                                    <input type="text" class="form-control" id="ciudad"
+                                                    <label for="ciudad" class="form-label texto_card">Ciudad:</label>
+                                                    <input type="text" class="form-control texto_input" id="ciudad"
                                                         placeholder='"Teziutlán"' formControlName="ciudad">
                                                     <div *ngIf="productForm?.get('ciudad')?.hasError('required') && productForm.get('ciudad')?.touched"
                                                         class="invalid-check">
@@ -168,8 +175,9 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-6 mb-3">
-                                                    <label for="email" class="form-label">Correo Electrónico</label>
-                                                    <input type="email" class="form-control" id="email"
+                                                    <label for="email" class="form-label texto_card">Correo
+                                                        Electrónico:</label>
+                                                    <input type="email" class="form-control texto_input" id="email"
                                                         placeholder='"tucorreo@example.com"' formControlName="email">
                                                     <div *ngIf="productForm?.get('email')?.hasError('required') && productForm.get('email')?.touched"
                                                         class="invalid-check">
@@ -177,8 +185,9 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6 mb-3">
-                                                    <label for="telefono" class="form-label">Teléfono</label>
-                                                    <input type="phone" class="form-control" id="telefono"
+                                                    <label for="telefono"
+                                                        class="form-label texto_card">Teléfono:</label>
+                                                    <input type="phone" class="form-control texto_input" id="telefono"
                                                         placeholder='"1235550101"' formControlName="telefono">
                                                     <div *ngIf="productForm?.get('telefono')?.hasError('required') && productForm.get('telefono')?.touched"
                                                         class="invalid-check">
@@ -189,12 +198,8 @@
                                         </form>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <button type="submit" class="btn_enviar_pedido bold">Enviar
-                                            Solicitud</button>
-                                    </div>
-                                </div>
+                                <button type="submit" class="btn_enviar_pedido bold">Enviar
+                                    Solicitud</button>
                             </div>
                         </ng-container>
                     </form>
@@ -204,7 +209,7 @@
             <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
                 tabindex="0">
                 <div class="row mb-3 row-cols-1 row-cols-md-3 g-4">
-                    <ng-container *ngFor="let aux of listaProductos">
+                    <ng-container *ngFor="let aux of listaProductosCompleta">
                         <div class="col">
                             <div class="card mb-2">
                                 <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(aux.foto)"
