--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,7 +79,7 @@ $color_fondo_card: #F6F5F1;
     color: $color_gris;
     font-weight: bolder;
     font-family: $kamerik-light;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
 .btn_pedido:hover {
@@ -94,11 +94,12 @@ $color_fondo_card: #F6F5F1;
     border: 2px solid white;
     background-color: white;
     color: $color_gris_oscuro;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 30px;
+    font-family: $kamerik-bold;
+    font-size: 25px;
     margin-top: 20px;
     padding: 10px 10px;
-    color: $color_verde;
+    color: $color_verde_card;
+    text-transform: lowercase;
   }  
 
 .img-table {
@@ -141,6 +142,27 @@ $color_fondo_card: #F6F5F1;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+}
+
+footer {
+    height: auto;
+    width: auto;
+    background-color: $color_verde_footer;
+    //background-color: rgba(0, 0, 0, 0);
+    //background-image: url('./assets/img/pruebanav\ -\ copia.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.texto_footer {
+    color: white;
+    font-family: $kamerik-book;
+}
+
+.btn_footer_correo {
+    color: white;
+    background-color: $color_verde_dark;
 }
 
 /* Estilo para los elementos del menú */
@@ -197,6 +219,10 @@ $color_fondo_card: #F6F5F1;
     margin: 0%;
 }
 
+.texto_input {
+    font-family: $kamerik-book-oblique;
+}
+
 .texto_subtitle {
     font-family: $kamerik-book;
     font-size: 20px;
@@ -219,6 +245,45 @@ $color_fondo_card: #F6F5F1;
 
 .fondo_card {
     background-color: $color_fondo_card;
+}
+
+.icon {
+    margin: 6% 10% 0px 0px;
+    font-size: 25px;
+    text-decoration: none;
+    color: $color_gris;
+}
+
+.icon_footer {
+    margin: 6% 10% 0px 0px;
+    font-size: 25px;
+    text-decoration: none;
+    color: white;
+}
+
+.icon:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color: $color_gris;
+}
+.icon_footer:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
+}
+
+.icon .icon-face-blanco::before {
+    color: $color_gris;
+}
+
+.icon .path1::before {
+    color: $color_gris !important;
+}
+.icon .path2::before {
+    color: $color_gris !important;
+}
+.icon .path3::before {
+    color: $color_gris !important;
 }
 
 //revisar este en productos es para que se despliegue palabra por palabra
