--- a/src/app/pages/actividades/actividades.component.html
+++ b/src/app/pages/actividades/actividades.component.html
@@ -26,46 +26,28 @@
   </div>
 <div class="container text-center mt-3 mb-4">
     <span class="texto_subtitle">Manzana Serrana</span><br>
-    <p class="texto_title bold espacios_textos">Recreacion &</p><br>
+    <p class="texto_title bold espacios_textos">Recreación &</p><br>
     <p class="texto_title bold espacios_textos">Deportes</p>
   </div>
 <div class="container mt-3 mb-3">
     <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-            <div class="borde p-4">
-                <img src="../../../assets/img/act-1.jpg" class="card-img-top" alt="...">
+        <div class="col-md-6">
+            <div class="borde p-4" style="min-height: 100%;">
+                <img src="../../../assets/img/act-1.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
-                    <h5 class="card-title">Trail Running</h5>
-                    <p class="card-text">Si eres apasionado del Trail no te puedes perder 3K, 5K, 10k, 15K, 25K de rutas por caminos, sederos o veredas, donde podrás poner a prueba tus técnicas como runner.</p>
+                    <h5 class="texto_card_big">Trail Running</h5>
+                    <p class="descripcion_card">Si eres apasionado del Trail no te puedes perder 3K, 5K, 10k, 15K, 25K de rutas por caminos, sederos o veredas, donde podrás poner a prueba tus técnicas como runner.</p>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="borde p-4">
-                <img src="../../../assets/img/act-2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Camping</h5>
-                    <p class="card-text">Podrás tener la experiencia de convivir con un entorno de mucha naturaleza, realizar una fogata, escuchar los sonidos de la noche y pasar momentos increíbles en medio del bosque.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="">
-                <img src="../../../assets/img/act-3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Mountain Bike</h5>
-                    <p class="card-text">Atrévete a una aventura con mucha adrenalina por senderos y caminos con abundante vegetación. Te esperan descensos y subidas donde pondrás a prueba tus habilitades.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="">
-                <img src="../../../assets/img/act-4.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Hiking</h5>
-                    <p class="card-text">Simplemente hagamos senderismo por huertas y caminos con mucha vegetación, también podrás visitar nacimientos de agua y puntos de interés.</p>
-                </div>
-            </div>
-        </div>
+        <div class="col-md-6">
+          <div class="borde p-4" style="min-height: 100%;">
+              <img src="../../../assets/img/act-1.jpg" class="card-img-top" alt="..." >
+              <div class="card-body">
+                  <h5 class="texto_card_big">Trail Running</h5>
+                  <p class="descripcion_card">Si eres apasionado del Trail no te puedes perder 3K, 5K, 10k, 15K, 25K de rutas por caminos, sederos o veredas, donde podrás poner a prueba tus técnicas como runner.</p>
+              </div>
+          </div>
+      </div>
     </div>
 </div>
