--- a/src/app/pages/pedidos/pedidos.component.scss
+++ b/src/app/pages/pedidos/pedidos.component.scss
@@ -1,16 +1,17 @@
 .swiper {
-    width: auto;
-    margin: 0% 2% 0% 8%;
-  }
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 
-  .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
-  }
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
 
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-  }
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
