--- a/src/app/pages/agregar-derivado/agregar-derivado.component.html
+++ b/src/app/pages/agregar-derivado/agregar-derivado.component.html
@@ -2,7 +2,7 @@
     <span>.</span>
 </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Agregar Derivado</h1>
+    <h1 class="mt-5 mb-3 text-center">{{titulo}}</h1>
 </div>
 <div class="container">
     <form [formGroup]="formulario" (ngSubmit)="guardarDerivado()">
@@ -11,13 +11,16 @@
             <input type="text" id="nombre" class="form-control" formControlName="nombre" placeholder="Nombre">
         </div>
         <div class="mb-3">
-            <label for="foto" class="form-label">Imagen del Producto</label>
-            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
-        </div>
+            <label for="foto" class="form-label">Imagen del Evento</label>
+            <div class="text-center">
+              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
+            </div>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
+          </div>
         <div class="mb-3">
             <label for="descripcion" class="form-label">Descripción</label>
             <textarea id="descripcion" class="form-control" formControlName="descripcion" placeholder="Descripcion"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-primary">{{tituloBoton}}</button>
     </form>
 </div>
